feat: bump jdk 25 and all dependency versions